fix floating title whitespace wrapping in titlewrap

--- a/css/cdm.css
+++ b/css/cdm.css
@@ -297,6 +297,7 @@ div#floatingTitle div.hlFeed a {
 
 div#floatingTitle span.titleWrap {
 	width : 100%;
+	white-space : normal;
 }
 
 div#floatingTitle .dijit,
